--- a/templates/table.html
+++ b/templates/table.html
@@ -7,7 +7,8 @@
 
       function drawTable() {
         var data = new google.visualization.DataTable();
-        data.addColumn('number', 'Partida');
+        data.addColumn('number', 'ID Usuario');
+        data.addColumn('number', 'ID Partida');
         data.addColumn('string', 'Fecha');
         data.addColumn('number', 'Minutos Jugados');
         data.addColumn('number', 'Puntaje');
