--- a/templates/table.html
+++ b/templates/table.html
@@ -22,5 +22,7 @@
   </head>
   <body>
     <div id="table_div"></div>
+    <br>
+    <button onclick="location.href='filtro'">Regresar al filtro</button>
   </body>
 </html>
